Add menu scene:
- Menu Scene is now the Main Scene.
- Difficulty selection on Menu Screen: Random, Hard, Medium, Easy
- Game Over and Win Screens also go to Menu Screen

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,8 +1,12 @@
 [application]
 
 name="BrickBreaker"
-main_scene="res://scenes/level1.xml"
+main_scene="res://scenes/menu.xml"
 icon="res://icon.png"
+
+[autoload]
+
+global="*res://scripts/global.gd"
 
 [display]
 
