change game name and icon

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,8 +1,8 @@
 [application]
 
-name="BrickBreaker"
+name="DiamondBreaker"
 main_scene="res://scenes/menu.xml"
-icon="res://icon.png"
+icon="res://textures/powerup_icon.png"
 
 [autoload]
 
